begin section 1 layout

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <!-- <link rel="stylesheet" type="text/css" href="style.css" media="screen, handheld" />
-    <link rel="stylesheet" type="text/css" href="enhanced.css" media="screen  and (min-width: 40.5em)" /> -->
-    <link rel="stylesheet/scss" type="text/css" href="style.scss"media="screen, handheld"/> 
+     <link rel="stylesheet" type="text/css" href="style.css" media="screen, handheld" />
+        <!-- Bootstrap CSS -->
+     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> 
 </head>
 <body>
         <div class="headline">
@@ -18,18 +18,21 @@
                 <p class="headline__subhead">HAVE BEEN DISCOVERED IN<br class="hidebr">
                 DELICIOUS... GOOEY... <em>CHOCOLATE?</em></p>
                 </div>
-            <div class="small-12 columns">
-                <div class="small-12 medium- columns">
+          <div> 
+              <p> Could the secret form <em>perfect</em> blood sugar have been discovered in...</p>
+          </div>
+            <div class="container-fluid">
+                    <div class="row">
+                            <div class="col-sm">
+        
                     <img alt="Delicious" src="https://d13p2xj50zkyqm.cloudfront.net/promos/health/GLN/masterswitch_chocolateRL_ihtml_0317/DeliciousImg_2.png" width="100%">
                     <p class="chocoimg-caption">Delicious...</p>
                 </div>
-                <div class="small=12 medium-4 columns">
+                <div class="col-sm">
                     <img alt="Gooey" src="https://d13p2xj50zkyqm.cloudfront.net/promos/health/GLN/masterswitch_chocolateRL_ihtml_0317/GooeyImg_3.png" width=100%>
                     <p class="chocoimg-caption">Gooey...</p>
                 </div>
-                <div class="small-12 medium-4 columns"></div>
-            </div>
-            <div class="small-12 medium-4 columns">
+                <div class="col-sm">
                 <img alt="Chocolate" src="https://d13p2xj50zkyqm.cloudfront.net/promos/health/GLN/masterswitch_chocolateRL_ihtml_0317/ChocolateImg_4.png" width="100%">
                 <p class="chocoimg-caption">Chocolate...</p>
             </div>
@@ -38,5 +41,22 @@
     </div>
 </div>
 </div>
+<div class="content-wrapper "> 
+    <div class="col-sm-12">
+        <p id="test">According to a recent animal study published in the European Journal of Lipid Science and Technology, the answer is yes!</p>
+        <p>Here’s how:</p>
+        <p>Scientists have discovered keeping your blood sugar healthy boils down to a simple enzyme in your body.</p>
+        <p>Scientists have discovered keeping your blood sugar healthy boils down to a simple enzyme in your body.</p>
+        <p>If this enzyme is shut down, that leads to…</p>
+        <ul class="checkmark">
+                <li><em> Concerning <strong>insulin levels</strong>…</em></li>
+                <li><em>Struggling to keep your <strong>HbA1c</strong> in the normal range…</em></li>
+                <li><em>Or frustration with your <strong>belly fat </strong>and <strong>fatigue </em></strong>…</li>
+            </ul>
+</div>
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
