update README with unresolved issues and errors

--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
 </head>
 
 <body>
-    
+
     <div class="headline">
-         
-        <p class="headline__eyebrow">COULD THE SECRET FOR</p> 
-        <div class="col-2 col-sm-2 col-md-6 col-lg-8 col-xl-12">
-        <h1 class="headline__title">PERFECT BLOOD SUGAR</h1>
-    </div>
-    <div class="col-sm"></div>
+
+        <p class="headline__eyebrow">COULD THE SECRET FOR</p>
+        <div class="col-">
+            <h1 class="headline__title">PERFECT BLOOD SUGAR</h1>
+        </div>
+
         <p class="headline__subhead">HAVE BEEN DISCOVERED IN<br class="hidebr">
             DELICIOUS... GOOEY... <em>CHOCOLATE?</em></p>
     </div>
-    <div class="col-12 col-sm- col-md-6 col-lg-8 col-xl-12">
+    <div class="col-4 col-sm- col-md-6 col-lg-8 col-xl-12">
         <p> Could the secret for <em>perfect</em> blood sugar have been discovered in...</p>
     </div>
     <div class="container-fluid">
@@ -32,19 +32,19 @@
             <div class="col-sm">
                 <img alt="Delicious"
                     src="https://d13p2xj50zkyqm.cloudfront.net/promos/health/GLN/masterswitch_chocolateRL_ihtml_0317/DeliciousImg_2.png"
-                    width=100%>
+                    width="100%">
                 <p class="chocoimg-caption">Delicious...</p>
             </div>
             <div class="col-sm">
                 <img alt="Gooey"
                     src="https://d13p2xj50zkyqm.cloudfront.net/promos/health/GLN/masterswitch_chocolateRL_ihtml_0317/GooeyImg_3.png"
-                    width=100%>
+                    width="100%">
                 <p class="chocoimg-caption">Gooey...</p>
             </div>
             <div class="col-sm">
                 <img alt="Chocolate"
                     src="https://d13p2xj50zkyqm.cloudfront.net/promos/health/GLN/masterswitch_chocolateRL_ihtml_0317/ChocolateImg_4.png"
-                    width=100%>
+                    width="100%">
                 <p class="chocoimg-caption">Chocolate...</p>
             </div>
         </div>
@@ -67,43 +67,44 @@
             </ul>
         </div>
     </div>
-        <div class="col-sm-12">
-            <div class="s2 parallax">
+    <div class="col-sm-12">
+        <div class="s2 parallax">
 
-                <h1 class="parallax__header">You can have PERFECT blood sugar,<br class="parabr">
-                    every time you check…</h1>
+            <h1 class="parallax__header">You can have PERFECT blood sugar,<br class="parabr">
+                every time you check…</h1>
 
-                <p class="parallax__subhead"><em> You’ll marvel at your steady, low, natural insulin levels…</em></p>
-            </div>
+            <p class="parallax__subhead"><em> You’ll marvel at your steady, low, natural insulin levels…</em></p>
         </div>
-        <div class="col-sm-12">
-            <div class="sideBanner">
-                <div class="sideBanner__wrapper">
-                    <div class="sideBanner__row">
-                        <div class="sideBanner__col sideBanner__col--img"><img alt="sideBanner" class="sideBanner__img"
-                                src="https://d13p2xj50zkyqm.cloudfront.net/promos_/health/GLN/masterswitch_chocolateRL_ihtml_0317/DoctorAndLady_6.png"
-                                align="left" a/></div>
-                        <div class="sideBanner__col sideBanner__col--text">
-                            <p>You might even get a thumbs up from your doctor, after confirming your HbA1c is the best
-                                it’s been in <em>years</em>…</p>
-                            <p>And <em>also</em> hear from your doctor that whatever you’ve been doing to lose those
-                                extra pounds: “<em>Keep it up, because it’s working like crazy!”</em></p>
-                        </div>
+    </div>
+    <div class="col-sm-12">
+        <div class="sideBanner">
+            <div class="sideBanner__wrapper">
+                <div class="sideBanner__row">
+                    <div class="sideBanner__col sideBanner__col--img"><img alt="sideBanner" class="sideBanner__img"
+                            src="https://d13p2xj50zkyqm.cloudfront.net/promos_/health/GLN/masterswitch_chocolateRL_ihtml_0317/DoctorAndLady_6.png"
+                            align="left" a /></div>
+                    <div class="sideBanner__col sideBanner__col--text">
+                        <p>You might even get a thumbs up from your doctor, after confirming your HbA1c is the best
+                            it’s been in <em>years</em>…</p>
+                        <p>And <em>also</em> hear from your doctor that whatever you’ve been doing to lose those
+                            extra pounds: “<em>Keep it up, because it’s working like crazy!”</em></p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    </div>
 
-        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-        </script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-        </script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-        </script>
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
 </body>
+
 </html>
